# finetuning_image_captioning_model

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: Finetuning.ipynb
src/captioning/: __init__.py  config.py  flickr_dataset.py  model.py  trainer.py  utils.py
src/captioning/core/: __init__.py  base_trainer.py
