[project]
name = "image-captioning"
version = "0.1.0"
description = "Fine-tuning an image captioning model using LoRA — AIMv2 vision encoder + SmolLM2 language model"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "datasets>=2.0.0",
    "peft>=0.10.0",
    "sacrebleu>=2.0.0",
    "tensorboardx>=2.6.0",
    "tqdm>=4.65.0",
    "matplotlib>=3.7.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "ipykernel>=6.0.0",
    "ipywidgets>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/captioning"]

[tool.uv]
dev-dependencies = [
    "jupyter>=1.0.0",
    "tensorboard>=2.14.0",
]
